Bug 156113 - Information in floating window over systray icon often is not correct
Summary: Information in floating window over systray icon often is not correct
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Main Application (other bugs)
Version First Reported In: 0.50.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 162117 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-01-18 16:16 UTC by Andrew Skvortzov
Modified: 2008-05-27 12:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Skvortzov 2008-01-18 16:16:03 UTC
Version:           0.50.0 (using KDE 3.5.8)
Installed from:    Ubuntu Packages
Compiler:          gcc 
OS:                Linux

For example I am already connected to Jabber. But in floating window, that appears when i move mouse to systray icon, is displayed "Offline" or "Connecting...". Such problem with information for ICQ protocol. Sometimes information is correct.
Comment 1 Matt Rogers 2008-01-26 06:42:16 UTC
Do the tooltips for both Jabber and ICQ display incorrect information? Or is it just one of them that's wrong? 
Comment 2 Andrew Skvortzov 2008-01-26 09:29:22 UTC
For both Jabber and ICQ tooltips show incorrect information. sometimes everything is all right.
Comment 3 Roman Jarosz 2008-03-28 17:36:15 UTC
SVN commit 791176 by rjarosz:

Correctly update tooltip of systray and identities.

BUG: 156113
BUG: 157444



 M  +18 -10    kopete/kopetewindow.cpp  
 M  +6 -0      kopete/kopetewindow.h  
 M  +3 -0      libkopete/kopeteidentity.cpp  
 M  +1 -0      libkopete/kopeteidentity.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=791176
Comment 4 Roman Jarosz 2008-03-28 17:42:50 UTC
SVN commit 791180 by rjarosz:

Backport commit 791176.
Correctly update tooltip of systray and identities.

CCBUG: 156113
CCBUG: 157444



 M  +14 -6     kopete/kopetewindow.cpp  
 M  +6 -0      kopete/kopetewindow.h  
 M  +3 -0      libkopete/kopeteidentity.cpp  
 M  +1 -0      libkopete/kopeteidentity.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=791180
Comment 5 Roman Jarosz 2008-05-27 12:12:48 UTC
*** Bug 162117 has been marked as a duplicate of this bug. ***