Correctly update tooltip of systray and identities.

BUG: 156113
BUG: 157444


svn path=/trunk/KDE/kdenetwork/kopete/; revision=791176